tests/ui/interior-mutability/interior-mutability.stderr
error[E0277]: the type `{closure@$DIR/interior-mutability.rs:5:18: 5:20}` may not be safely transferred across an unwind boundary
  --> $DIR/interior-mutability.rs:5:18
   |
LL |     catch_unwind(|| { x.set(23); });
   |     ------------ ^^^^^^^^^^^^^^^^^ `{closure@$DIR/interior-mutability.rs:5:18: 5:20}` may not be safely transferred across an unwind boundary
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Cell<i32>`, the trait `UnwindSafe` is not implemented for closure `{closure@$DIR/interior-mutability.rs:5:18: 5:20}`, which is required by `{closure@$DIR/interior-mutability.rs:5:18: 5:20}: UnwindSafe`
note: required because it appears within the type `Cell<i32>`
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: required for `&Cell<i32>` to implement `UnwindSafe`
note: required because it's used within this closure
  --> $DIR/interior-mutability.rs:5:18
   |
LL |     catch_unwind(|| { x.set(23); });
   |                  ^^
note: required by a bound in `std::panic::catch_unwind`
  --> $SRC_DIR/std/src/panic.rs:LL:COL
help: use parentheses to call this closure
   |
LL |     catch_unwind(|| { x.set(23); }());
   |                                   ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
